# concopt

./: .gitignore  cas_formula.md  max_gs.ipynb  pyproject.toml  script.py
nb/: max_gs.ipynb
src/: asky.py  conditions.py  constants.py  utils.py
src/concopt/: airframeflows.py  asky.py  atmosphere.py  common.py  conc_conditions.py  condition.py  conditions.py  constants.py  isentropicflow.py  nondimensional.py  units.py  utils.py
src/concopt/data/: atmosphere.csv  conc_cas_limit.csv  conc_data.py  conc_desc_time.csv
