[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "concopt"
authors = [
    {name = "Tom Marshall", email = "qwertytam@gmail.com"},
]
description = "Optimize Concorde flight operations"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["concorde", "flight"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "importlib",
    "logging",
    "pandas",
    "pint-pandas",
    "requests",
    "scipy"
]

version = "0.0.1"

[tool.setuptools]
include-package-data = true